--- a/AutoLayout/gradle.properties
+++ b/AutoLayout/gradle.properties
@@ -25,9 +25,11 @@ POM_URL=https://github.com/DTHeaven/AutoLayout-Android
 POM_SCM_URL=https://github.com/DTHeaven/AutoLayout-Android
 POM_SCM_CONNECTION=scm:git:git://github.com/DTHeaven/AutoLayout-Android.git
 POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com:DTHeaven/AutoLayout-Android.git
+POM_ISSUE_URL=https://github.com/DTHeaven/AutoLayout-Android/issues
 
 POM_LICENCE_NAME=The Apache Software License, Version 2.0
 POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
+POM_ALL_LICENCES=['Apache-2.0']
 POM_LICENCE_DIST=repo
 
 POM_DEVELOPER_ID=dtheaven
