--- a/AutoLayout/autolayout-compiler/build.gradle
+++ b/AutoLayout/autolayout-compiler/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'java'
+sourceCompatibility = JavaVersion.VERSION_1_7
+targetCompatibility = JavaVersion.VERSION_1_7
 
 def logger = new com.android.build.gradle.internal.LoggerWrapper(project.logger)
 def sdkHandler = new com.android.build.gradle.internal.SdkHandler(project, logger)
