--- a/AutoLayout/autolayout/build.gradle
+++ b/AutoLayout/autolayout/build.gradle
@@ -13,9 +13,9 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.android.support:cardview-v7:23.1.1'
-    compile 'com.android.support:recyclerview-v7:23.1.1'
+    provided 'com.android.support:appcompat-v7:23.1.1'
+    provided 'com.android.support:cardview-v7:23.1.1'
+    provided 'com.android.support:recyclerview-v7:23.1.1'
     compile project(':autolayout-annotations')
 }
 
