--- a/AutoLayout/autolayout-sample/build.gradle
+++ b/AutoLayout/autolayout-sample/build.gradle
@@ -29,9 +29,9 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
-//    compile project(':autolayout')
-//    apt project(':autolayout-compiler')
-    compile 'im.quar:autolayout:1.0.3'
-    apt 'im.quar:autolayout-compiler:1.0.3'
+    compile project(':autolayout')
+    apt project(':autolayout-compiler')
+//    compile 'im.quar:autolayout:1.0.3'
+//    apt 'im.quar:autolayout-compiler:1.0.3'
 
 }
